Archive2/21/3656b9da53e4a1/output
main.cpp:2:6: error: 'string' in namespace 'std' does not name a type
 std::string ip2string(unsigned long ip)
      ^
main.cpp:13:25: error: 'string' is not a member of 'std'
 unsigned long string2ip(std::string s)
                         ^
main.cpp:14:1: error: expected ',' or ';' before '{' token
 {
 ^
main.cpp:23:6: error: 'string' in namespace 'std' does not name a type
 std::string host2ipString(std::string host) // TODO: Turn this into a useful function. read man:getaddrinfo
      ^
